Fix margin being too big on mobile.

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -47,7 +47,7 @@
 }
 
 .page-content {
-  margin: $spacing-unit;
+  margin: 2%;
   h2 {
     @include relative-font-size(1.8);
     color: $brand-color;
